--- a/src/style.css
+++ b/src/style.css
@@ -41,13 +41,17 @@ h3 {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  align-items: center;
 }
 
 .details,
 .characters {
   background-color: #ebe8e8a2;
   width: 15em;
-  height: 25em;
+  height: fit-content;
   margin: 3em;
+}
+
+p {
+  padding: 1em;
+  text-align: center;
 }
